--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,16 @@
   max-width: 1080px;
   margin: 20px auto;
 }
+
+.loading {
+  height: 100%;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+p::first-letter {
+  text-transform: capitalize;
+}
